Updated build configuration

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
   "start": "netlify-lambda serve src",
-  "build": "netlify-lambda build src"
+  "build": "netlify-lambda build src && mkdir -p build && touch build/.gitkeep"
 },
   "keywords": [],
   "author": "",
