--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "tidiprint-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-  "start": "netlify-lambda serve src",
-  "build": "netlify-lambda build src"
-},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+    "build": "netlify-lambda build src && mkdir -p build && touch build/.gitkeep"
+  },
   "dependencies": {
+    "express": "^4.17.1",
+    "serverless-http": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.6.3",
+    "netlify-lambda": "^2.0.15"
   }
-
 }
